--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "/src/index/index.js",
   "scripts": {
-    "start" : "node /src/index/index.js",
-    "test" : "node /src/test/test.js"
+    "start": "node ./src/index/index.js",
+    "test": "node ./src/test/test.js"
   },
   "keywords": [],
   "author": "",
