--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.12.1"
   }
 }
